--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -43,7 +43,7 @@
                         <div class="tp-login-option">
                            <div class="tp-login-social mb-10 d-flex flex-wrap align-items-center justify-content-center">
                               <div class="tp-login-option-item has-google">
-                                 <a href="{% provider_login_url 'google' %}">
+                                 <a href="{% url 'google_login' %}">
                                     <img src="{% static 'assets/img/icon/login/google.svg' %}" alt="">
                                     Продолжить с Google
                                  </a>
@@ -53,11 +53,11 @@
                                     <img src="{% static 'assets/img/icon/login/facebook.svg' %}" alt="">
                                  </a>
                               </div>
-                              <div class="tp-login-option-item">
+                              <!-- <div class="tp-login-option-item">
                                  <a href="login.html#">
                                     <img class="apple" src="{% static 'assets/img/icon/login/apple.svg' %}" alt="">
                                  </a>
-                              </div>
+                              </div> -->
                            </div>
                            <div class="tp-login-mail text-center mb-40">
                               <p>Войдите в свою учетную запись</a></p>
