--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -293,6 +293,16 @@
                                  <i class="fas fa-search"></i>
                               </button>
                            </div>
+                           <div class="tp-header-action-item">
+                              <a href="{% url 'comparison_page' %}"  class="tp-header-action-btn d-lg-none d-xl-none">
+                                 <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14.8396 17.3319V3.71411" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M19.1556 13L15.0778 17.0967L11 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M4.91115 1.00056V14.6183" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M0.833496 5.09667L4.91127 1L8.98905 5.09667" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                 </svg>                                       
+                              </a>
+                           </div>
                            <div class="tp-header-action-item tp-header-hamburger mr-20 d-xl-none">
                               <button type="button" class="tp-offcanvas-open-btn">
                                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="16" viewBox="0 0 30 16">
