--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -50,15 +50,15 @@
                                  </a>
                               </div>
                               <div class="tp-login-option-item">
-                                 <a href="register.html#">
-                                    <img src="{% static 'assets/img/icon/login/facebook.svg' %}" alt="">
+                                 <a href="{% provider_login_url 'telegram' %}">
+                                    <img src="{% static 'assets/img/icon/login/Telegram_2019_Logo.svg.png' %}" style="width: 30%;" alt="">
                                  </a>
                               </div>
-                              <div class="tp-login-option-item">
+                              <!-- <div class="tp-login-option-item">
                                  <a href="register.html#">
                                     <img class="apple" src="{% static 'assets/img/icon/login/apple.svg' %}" alt="">
                                  </a>
-                              </div>
+                              </div> -->
                            </div>
                            <div class="tp-login-mail text-center mb-40">
                               <p>Создайте аккаунт по электронной почте</a></p>
