--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -50,7 +50,7 @@
                               </div>
                               <div class="tp-login-option-item">
                                  <a href="{% provider_login_url 'telegram' %}">
-                                    <img src="{% static 'assets/img/icon/login/facebook.svg' %}" alt="">
+                                    <img src="{% static 'assets/img/icon/login/Telegram_2019_Logo.svg.png' %}" style="width: 30%;" alt="">
                                  </a>
                               </div>
                               <!-- <div class="tp-login-option-item">
