add sort by status

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -18553,9 +18553,7 @@ product all slider
   cursor: pointer;
 }
 .tp-shop-widget-categories {
-  height: 288px;
-  overflow-y: scroll;
-  overflow-y: scroll;
+  height: auto;
   overscroll-behavior-y: contain;
   scrollbar-width: thin;
   padding-right: 10px;
