--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -223,7 +223,7 @@
                                           </div>
                                           <div class="col-xxl-12">
                                              <div class="profile__btn">
-                                                <button type="submit" class="tp-btn">Обновить профиль</button>
+                                                <button type="submit" class="tp-btn" name="update">Обновить профиль</button>
                                              </div>
                                           </div>
                                        </div>
@@ -268,7 +268,7 @@
                                        </div>
                                        <div class="col-xxl-6 col-md-6">
                                           <div class="profile__btn">
-                                             <button type="submit" class="tp-btn">Обновить пароль</button>
+                                             <button type="submit" class="tp-btn" name="update_password">Обновить пароль</button>
                                           </div>
                                        </div>
                                     </div>
