--- a/templates/shop/brand.html
+++ b/templates/shop/brand.html
@@ -73,7 +73,7 @@
          </div>
          <!-- brands -->
          <div class="tp-shop-widget mb-50">
-            <h3 class="tp-shop-widget-title">Популярные бренды</h3>
+            <h3 class="tp-shop-widget-title">Бренды</h3>
 
             <div class="tp-shop-widget-content">
                <div class="tp-shop-widget-product">
