--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,8 +1,7 @@
 {% extends 'include/homepage.html' %}
-{% load static %}
+{% load static socialaccount %}
 {% block content %}
-{% include 'include/header.html' %}
-{% load socialaccount %}    
+{% include 'include/header.html' %} 
 {% providers_media_js %}
       <main>
 
