--- a/templates/shop/sub-category.html
+++ b/templates/shop/sub-category.html
@@ -11,10 +11,10 @@
                <div class="row">
                   <div class="col-xxl-12">
                      <div class="breadcrumb__content p-relative z-index-1">
-                        <h3 class="breadcrumb__title">Категории</h3>
+                        <h3 class="breadcrumb__title">{{parent_category.title}}</h3>
                         <div class="breadcrumb__list">
                            <span><a href="{% url 'index' %}">Главная страница</a></span>
-                           <span>Категории</span>
+                           <span>{{parent_category.title}}</span>
                         </div>
                      </div>
                   </div>
@@ -28,13 +28,13 @@
          <section class="tp-category-area pb-120">
             <div class="container">
                <div class="row">
-                  {% for category in categories %}
+                  {% for category in subcategories %}
                   <div class="col-lg-4 col-sm-6">
                      <div class="tp-category-main-box mb-25 p-relative fix" data-bg-color="#F3F5F7">
                         <div class="tp-category-main-thumb include-bg transition-3" data-background="{{category.image.url}}"></div>
                         <div class="tp-category-main-content">
                            <h3 class="tp-category-main-title">
-                              <a href="{% url 'sub_category' %}?parent_slug={{ category.slug }}">{{category.title}}</a>
+                              <a href="{% url 'category_detail' category.slug %}">{{category.title}}</a>
                            </h3>
                            <span class="tp-category-main-item">{{category.category_products.all.count}} продуктов</span>
                         </div>
